--- a/index.html
+++ b/index.html
@@ -6,31 +6,21 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 	</head>
 	<body>
-		<button id="shareBtn">点击分享</button>
-		<div class="soshm"></div>
+		<div class="soshm" id="share"></div>
 	</body>
 	<script src="dist/soshm.min.js"></script>
 	<script type="text/javascript">
-		 document.getElementById('shareBtn').addEventListener('click', function() {
-		    soshm.popIn({
-		      title: '弹窗分享',
-		      sites: ['weixin', 'weixintimeline']
-		    });
-		  }, false);
-		
 		soshm('#share', {
-	    // 分享的链接，默认使用location.href
-	    url: '',
-	    // 分享的标题，默认使用document.title
-	    title: '',
-	    // 分享的摘要，默认使用<meta name="description" content="">content的值
-	    digest: '',
-	    // 分享的图片，默认获取本页面第一个img元素的src
-	    pic: '',
-	    // 默认显示的网站为以下六个个,支持设置的网站有
-	    // weixin,weixintimeline,qq,qzone,yixin,weibo,tqq,renren,douban,tieba
-	    sites: ['weixin', 'weixintimeline', 'yixin', 'weibo', 'qq', 'qzone']
-	  });
-		
+    // 分享的链接，默认使用location.href
+    // 分享的标题，默认使用document.title
+    title: '',
+    // 分享的摘要，默认使用<meta name="description" content="">content的值
+    digest: '',
+    // 分享的图片，默认获取本页面第一个img元素的src
+    pic: '',
+    // 默认显示的网站为以下六个个,支持设置的网站有
+    // weixin,weixintimeline,qq,qzone,yixin,weibo,tqq,renren,douban,tieba
+    sites: ['weixin', 'weixintimeline', 'yixin', 'weibo', 'qq', 'qzone']
+  });
 	</script>
 </html>
